--- a/blog/2022-07-04-alejandro101.md
+++ b/blog/2022-07-04-alejandro101.md
@@ -10,7 +10,7 @@ tags: [personal]
 
 # Hola mundo
 
-Motivado por la línea de tiempo con la cual participé en la [reunión de fogón](https://twitter.com/turingway/status/1538893924022259712?ref_src=twsrc%5Etfw) organizada por el Turing Way la primera entrada de mi blog es una reflexión de lo que ha sido mi recorrido en los últimos 11 años.
+Motivado por la línea de tiempo con la cual participé en la <a href="https://twitter.com/turingway/status/1538893924022259712?ref_src=twsrc%5Etfw/">reunión de fogón</a> organizada por el Turing Way la primera entrada de mi blog es una reflexión de lo que ha sido mi recorrido en los últimos 11 años.
 
 Contaré resumidamente mis experiencias más relevantes en la ciencia medioambiental abierta y tecnologías de la información mediante una serie de anécdotas por etapas. Dichas anécdotas van más allá de lo técnico e incluyen oportunidades que comparto para que sean aprovechadas por otros identificados con caminos similares.
 
@@ -79,7 +79,7 @@ En esta aceleradora participé con otros investigadores afiliados en institucion
     <summary>Oportunidad 3 - Créditos gratuitos de investigación para la computación de la nube de Google y Microsoft</summary>
     Adicional al apoyo de los recursos hardware del proyecto Terra-i, tuve la iniciativa de explorar la computación de la nube a través del programa de educación que tienen Google y Microsoft.
     Google cuenta con un
-    {" "}<a href="https://edu.google.com/intl/ALL_us/programs/credits/research">programa de créditos para la investigación</a>).
+    {" "}<a href="https://edu.google.com/intl/ALL_us/programs/credits/research">programa de créditos para la investigación</a>.
     Por otra parte, Microsoft tiene el programa AI for Earth en el cual se patrocina créditos de la plataforma Azure para investigaciones relacionadas con el medioambiente.
     A diferencia del programa generalizado de Google, los créditos del programa
     {" "}<a href="https://www.microsoft.com/en-us/ai/ai-for-earth-grants">AI for Earth</a>
