fix hyperlinks to projects

--- a/blog/2022-07-04-alejandro101.md
+++ b/blog/2022-07-04-alejandro101.md
@@ -22,7 +22,7 @@ Tuve la oportunidad de cursar materias relacionadas con modelos y datos espacial
 Igualmente, realicé un intercambio con la Universidad de São Paulo, Brasil, donde conocí una nueva cultura y participé en grupos de investigación usando las tecnologías de geoprocesamiento aplicadas para estudios del medio ambiente y agricultura.
 En este intercambio me entrené en varias herramientas de procesamiento de imágenes satelitales tanto de licencia cerrada entre ellas ERDAS y ENVI, y de licencia abierta como SPRING.
 Asimismo, mis conocimientos en SIG fueron principalmente en ArcGIS, y un poco en QGIS.
-Ya finalizando mis estudios, en el mes de Mayo de 2011 tuve la oportunidad de poner a prueba mis conocimientos con mi primera consultoría realizando una base de datos y cartografía para un catálogo de plantas medicinales en Colombia (ver detalles [aquí](../projects/#unal-aromatic)).
+Ya finalizando mis estudios, en el mes de Mayo de 2011 tuve la oportunidad de poner a prueba mis conocimientos con mi primera consultoría realizando una base de datos y cartografía para un catálogo de plantas medicinales en Colombia (ver detalles [aquí](/projects/#unal-aromatic)).
 
 <details>
     <summary>Oportunidad 1 - Movilidad internacional</summary>
@@ -38,7 +38,7 @@ Ya finalizando mis estudios, en el mes de Mayo de 2011 tuve la oportunidad de po
 Como parte de mi práctica profesional del pregrado ingresé al proyecto [Terra-i](http://www.terra-i.org/) en el Centro Internacional de Agricultura Tropical (CIAT), ahora conocido como la [Alianza Bioversity-CIAT](https://alliancebioversityciat.org).
 Este proyecto tuvo un impacto muy positivo en mi desarrollo profesional.
 Terra-i es una iniciativa para el monitoreo global de la pérdida del hábitat generando alertas de deforestación de manera gratuita y abierta.
-Debido a la relevancia del proyecto con la agenda de la organización, participé en varios subproyectos que usaban los datos de la herramienta para cuantificar el estado de los ecosistemas en Latinoamérica y Caribe así como para pronosticar el impacto de proyectos de infraestructura vial en la región (ver detalles [aquí](../projects/#ciat-terrai)).
+Debido a la relevancia del proyecto con la agenda de la organización, participé en varios subproyectos que usaban los datos de la herramienta para cuantificar el estado de los ecosistemas en Latinoamérica y Caribe así como para pronosticar el impacto de proyectos de infraestructura vial en la región (ver detalles [aquí](/projects/#ciat-terrai)).
 
 Como investigador proactivo representé el proyecto en varios eventos internacionales en temas de conservación, bosques y tecnologías geoespaciales.
 Asimismo, promoví extensivamente el uso de los datos abiertos a través de estudios de caso en el blog del proyecto (ver por [ejemplo](http://www.terra-i.org/news/news/Is-the--Paraguayan-Gran-Chaco--at-risk-for-extreme-habitat-destruction-.html)).
@@ -63,17 +63,17 @@ En términos de comunidades, fui becario de la [Sociedad para la Conservación S
 ### Etapa 2 <sub><sup> MSc. y PhD en Geografía, 2014-2020</sup></sub>
 Como parte del proyecto Terra-i, conocí a [Mark Mulligan](https://www.kcl.ac.uk/people/mark-mulligan), profesor de King’s College London con quien en colaboración con el proyecto Terra-i abordamos el estudio de las causas de deforestación en el bioma amazónico.
 Fue un periodo donde me capacité y apliqué la ciencia de datos, inteligencia artificial y computación en la nube.
-De esta manera, en mi maestría analicé los patrones espaciales de la deforestación mediante el uso de minería de datos y análisis fractal (ver detalles [aquí](../projects/#kcl-master)).
+De esta manera, en mi maestría analicé los patrones espaciales de la deforestación mediante el uso de minería de datos y análisis fractal (ver detalles [aquí](/projects/#kcl-master)).
 A partir del uso de dos fuentes de datos abiertos de deforestación, Terra-i y los mapas de [Global Forest Change](https://www.science.org/doi/10.1126/science.1244693?cookieSet=1), mi investigación logró mapear la distribución espacial de patrones espaciales asociados con diferentes agentes de deforestación.
-En el doctorado tuve un abordaje más profundo con la aplicación de técnicas de análisis de las series de tiempo para extraer información de las coberturas y uso posterior a la deforestación a partir de imágenes satelitales (ver detalles [aquí](../projects/#kcl-phd)).
+En el doctorado tuve un abordaje más profundo con la aplicación de técnicas de análisis de las series de tiempo para extraer información de las coberturas y uso posterior a la deforestación a partir de imágenes satelitales (ver detalles [aquí](/projects/#kcl-phd)).
 En esta investigación se innovó en el uso de redes neuronales recurrentes convolucionales para la clasificación de series de tiempo de imágenes MODIS.
 Los modelos fueron entrenados usando recursos hardware del proyecto Terra-i así como créditos de computación de la nube de Google.
 
 Más allá de los avances técnicos durante mis estudios, pienso que lo más emocionante fue maximizar la colaboración y movilidad (intercambios, pasantías, conferencias y grupos de investigación).
-Por ejemplo, en mi maestría hice un intercambio en [Global Canopy](https://globalcanopy.org/), una ONG ambiental con sede en Oxford, Reino Unido en la cual hice un análisis de la seguridad hídrica en el Amazonas (ver detalles [aquí](../projects/#gcp-water)).
+Por ejemplo, en mi maestría hice un intercambio en [Global Canopy](https://globalcanopy.org/), una ONG ambiental con sede en Oxford, Reino Unido en la cual hice un análisis de la seguridad hídrica en el Amazonas (ver detalles [aquí](/projects/#gcp-water)).
 En el doctorado, hice intercambios en el año 2011 en HEIG-VD en Suiza y posteriormente en 2019 en la sede regional en Asia de CIAT en Vietnam.
 En la primera institución recibí entrenamiento en programación en Python, Big Data y Deep Learning en el laboratorio liderado por el profesor [Andres Perez-Uribe](http://www.alunaweb.net/andres/), y en el segundo perfeccioné los análisis y modelos con mi co-supervisor en CIAT, [Dr Louis Reymondin](https://ciat.cgiar.org/ciat-coffee-cocoa-portfolio/louis-reymondin/). También quiero destacar la pasantía en el verano de 2018 realizada en [Satellite Application Catapult](https://sa.catapult.org.uk/) en el campus de ciencia e innovación de Harwell (Reino Unido) donde participé en la aceleradora [Frontier Development Lab (FDL)](https://frontierdevelopmentlab.org/).
-En esta aceleradora participé con otros investigadores afiliados en instituciones de Europa para el mapeo de asentamientos ilegales a partir de imágenes de resolución media como Sentinel 2 y muy alta como WorldView-4 (ver detalles [aquí](../projects/#fdl-illegalsettlements)).
+En esta aceleradora participé con otros investigadores afiliados en instituciones de Europa para el mapeo de asentamientos ilegales a partir de imágenes de resolución media como Sentinel 2 y muy alta como WorldView-4 (ver detalles [aquí](/projects/#fdl-illegalsettlements)).
 
 <details>
     <summary>Oportunidad 3 - Créditos gratuitos de investigación para la computación de la nube de Google y Microsoft</summary>
