change details block to note

--- a/blog/2022-07-04-alejandro101.md
+++ b/blog/2022-07-04-alejandro101.md
@@ -24,15 +24,17 @@ En este intercambio me entrené en varias herramientas de procesamiento de imág
 Asimismo, mis conocimientos en SIG fueron principalmente en ArcGIS, y un poco en QGIS.
 Ya finalizando mis estudios, en el mes de Mayo de 2011 tuve la oportunidad de poner a prueba mis conocimientos con mi primera consultoría realizando una base de datos y cartografía para un catálogo de plantas medicinales en Colombia (ver detalles [aquí](/projects/#unal-aromatic)).
 
-<details>
-    <summary>Oportunidad 1 - Movilidad internacional</summary>
-    ¿Sabías que la mayoría de programas de pregrado cuentan con programas de intercambio con universidades internacionales?
-    Por ejemplo, la Oficina de Relaciones Interinstitucionales (
-    <a href="http://ori.bogota.unal.edu.co/">ORI</a>
-    ) de la Universidad Nacional de Colombia tiene una serie de convenios con múltiples universidades a nivel mundial. Gracias a estos convenios, yo pude estar durante 6 meses en Brasil, y asimismo recibí apoyo para participar en una conferencia en XV Simposio de Sensoriamento Remoto de Brasil, en la cual presente resultados de mi investigación de unos de los grupos de los que estuve involucrado (ver el artículo
-    {" "}<a href="http://marte.sid.inpe.br/col/dpi.inpe.br/marte/2011/07.13.13.19/doc/p1386.pdf">aquí</a>).
-    Si estas en pregrado o postgrado te invito mirar estos programas que muchas veces pasan desapercibidos, pero que son muy beneficiosos para conocer culturas y maneras de aplicar la ciencia en otros contextos.
-</details>
+:::info
+
+**Oportunidad 1 - Movilidad internacional**
+
+¿Sabías que la mayoría de programas de pregrado cuentan con programas de intercambio con universidades internacionales?
+Por ejemplo, la Oficina de Relaciones Interinstitucionales (
+<a href="http://ori.bogota.unal.edu.co/">ORI</a>
+) de la Universidad Nacional de Colombia tiene una serie de convenios con múltiples universidades a nivel mundial. Gracias a estos convenios, yo pude estar durante 6 meses en Brasil, y asimismo recibí apoyo para participar en una conferencia en XV Simposio de Sensoriamento Remoto de Brasil, en la cual presente resultados de mi investigación de unos de los grupos de los que estuve involucrado (ver el artículo
+{" "}<a href="http://marte.sid.inpe.br/col/dpi.inpe.br/marte/2011/07.13.13.19/doc/p1386.pdf">aquí</a>).
+Si estas en pregrado o postgrado te invito mirar estos programas que muchas veces pasan desapercibidos, pero que son muy beneficiosos para conocer culturas y maneras de aplicar la ciencia en otros contextos.
+:::
 
 ### Etapa 1 <sub><sup> datos abiertos de deforestación, 2011-2014</sup></sub>
 Como parte de mi práctica profesional del pregrado ingresé al proyecto [Terra-i](http://www.terra-i.org/) en el Centro Internacional de Agricultura Tropical (CIAT), ahora conocido como la [Alianza Bioversity-CIAT](https://alliancebioversityciat.org).
@@ -45,20 +47,22 @@ Asimismo, promoví extensivamente el uso de los datos abiertos a través de estu
 Fui autor y coordinador de un protocolo para la validación en campo de las alertas de deforestación en el Amazonas peruano el cual posteriormente fue replicado en otras regiones.
 En términos de comunidades, fui becario de la [Sociedad para la Conservación SIG (SCGIS)](https://scgis.org/about), un programa financiado por ESRI y organizaciones ambientales, que personalmente recomiendo para mejorar conocimientos en herramientas SIG y conocer otros investigadores a nivel mundial aplicando estas tecnologías para la conservación.
 
-<details>
-    <summary>Oportunidad 2 - Programas de entrenamiento en SIG</summary>
-    Como lo comenté en la parte final, tuve la oportunidad de ser becario del programa SCGIS.
-    La aplicación se abre anualmente y selecciona profesionales trabajando en el área de conservación para que mejoran su conocimientos en herramientas SIG, principalmente ArcGIS (ver detalles
-    {" "}<a href="https://scgis.org/training">aquí</a>).
-    Asimismo, el programa permite que los becarios presenten su trabajo en la
-    {" "}<a href="https://www.esri.com/en-us/about/events/uc/overview">conferencia de usuarios ESRI</a>
-    {" "}así como en la
-    {" "}<a href="https://scgis.org/conference">conferencia anual de SCGIS</a>.
-    El proceso es bien competido pero con una buena motivación, preparación y evidencia del trabajo de conservación en el formulario de la aplicación es posible ser seleccionado.
-    Es importante indicar que el programa cubre parcialmente los costos, y por tanto es necesario contar con apoyo externo de ciertos gastos como pasajes de avión y visa en caso de necesitar.
-    Otros programas de capacitaciones o escuelas de verano pueden encontrarse en diferentes temáticas adicionales a la conservación.
-    Mi consejo es buscar aquellas donde tengas una mayor afinidad, y donde ofrezcan la posibilidad de seguir conectado con los instructores y colegas que hacen parte de tu cohorte.
-</details>
+:::info
+
+**Oportunidad 2 - Programas de entrenamiento en SIG**
+
+Como lo comenté en la parte final, tuve la oportunidad de ser becario del programa SCGIS.
+La aplicación se abre anualmente y selecciona profesionales trabajando en el área de conservación para que mejoran su conocimientos en herramientas SIG, principalmente ArcGIS (ver detalles
+{" "}<a href="https://scgis.org/training">aquí</a>).
+Asimismo, el programa permite que los becarios presenten su trabajo en la
+{" "}<a href="https://www.esri.com/en-us/about/events/uc/overview">conferencia de usuarios ESRI</a>
+{" "}así como en la
+{" "}<a href="https://scgis.org/conference">conferencia anual de SCGIS</a>.
+El proceso es bien competido pero con una buena motivación, preparación y evidencia del trabajo de conservación en el formulario de la aplicación es posible ser seleccionado.
+Es importante indicar que el programa cubre parcialmente los costos, y por tanto es necesario contar con apoyo externo de ciertos gastos como pasajes de avión y visa en caso de necesitar.
+Otros programas de capacitaciones o escuelas de verano pueden encontrarse en diferentes temáticas adicionales a la conservación.
+Mi consejo es buscar aquellas donde tengas una mayor afinidad, y donde ofrezcan la posibilidad de seguir conectado con los instructores y colegas que hacen parte de tu cohorte.
+:::
 
 ### Etapa 2 <sub><sup> MSc. y PhD en Geografía, 2014-2020</sup></sub>
 Como parte del proyecto Terra-i, conocí a [Mark Mulligan](https://www.kcl.ac.uk/people/mark-mulligan), profesor de King’s College London con quien en colaboración con el proyecto Terra-i abordamos el estudio de las causas de deforestación en el bioma amazónico.
@@ -75,19 +79,21 @@ En el doctorado, hice intercambios en el año 2011 en HEIG-VD en Suiza y posteri
 En la primera institución recibí entrenamiento en programación en Python, Big Data y Deep Learning en el laboratorio liderado por el profesor [Andres Perez-Uribe](http://www.alunaweb.net/andres/), y en el segundo perfeccioné los análisis y modelos con mi co-supervisor en CIAT, [Dr Louis Reymondin](https://ciat.cgiar.org/ciat-coffee-cocoa-portfolio/louis-reymondin/). También quiero destacar la pasantía en el verano de 2018 realizada en [Satellite Application Catapult](https://sa.catapult.org.uk/) en el campus de ciencia e innovación de Harwell (Reino Unido) donde participé en la aceleradora [Frontier Development Lab (FDL)](https://frontierdevelopmentlab.org/).
 En esta aceleradora participé con otros investigadores afiliados en instituciones de Europa para el mapeo de asentamientos ilegales a partir de imágenes de resolución media como Sentinel 2 y muy alta como WorldView-4 (ver detalles [aquí](/projects/#fdl-illegalsettlements)).
 
-<details>
-    <summary>Oportunidad 3 - Créditos gratuitos de investigación para la computación de la nube de Google y Microsoft</summary>
-    Adicional al apoyo de los recursos hardware del proyecto Terra-i, tuve la iniciativa de explorar la computación de la nube a través del programa de educación que tienen Google y Microsoft.
-    Google cuenta con un
-    {" "}<a href="https://edu.google.com/intl/ALL_us/programs/credits/research">programa de créditos para la investigación</a>.
-    Por otra parte, Microsoft tiene el programa AI for Earth en el cual se patrocina créditos de la plataforma Azure para investigaciones relacionadas con el medioambiente.
-    A diferencia del programa generalizado de Google, los créditos del programa
-    {" "}<a href="https://www.microsoft.com/en-us/ai/ai-for-earth-grants">AI for Earth</a>
-    {" "}van más allá de prestar el servicio de la nube y pretenden conectar todos los investigadores e iniciativas proponiendo metodologías basadas en las ciencias de datos y IA para hacer impacto en sus proyectos medioambientales.
-    No estoy a favor de ninguno de los dos programas ya que cada uno tiene sus ventajas de acuerdo a las necesidades de la investigación y comunidad a la que desean pertenecer.
-    Para ambos programas, se requiere completar un formulario de aplicación donde se hacen una serie de preguntas de la investigación y un estimado del total de créditos requeridos.
-    Para maximizar los chances de ser seleccionado, mi sugerencia es aprovechar la subscripción prueba de cada proveedor de la nube. De esta manera, pueden hacer un mejor estimativo de los créditos requeridos así como de servicios adicionales que pueden mencionar en la aplicación.
-</details>
+:::info
+
+**Oportunidad 3 - Créditos gratuitos de investigación para la computación de la nube de Google y Microsoft**
+
+Adicional al apoyo de los recursos hardware del proyecto Terra-i, tuve la iniciativa de explorar la computación de la nube a través del programa de educación que tienen Google y Microsoft.
+Google cuenta con un
+{" "}<a href="https://edu.google.com/intl/ALL_us/programs/credits/research">programa de créditos para la investigación</a>.
+Por otra parte, Microsoft tiene el programa AI for Earth en el cual se patrocina créditos de la plataforma Azure para investigaciones relacionadas con el medioambiente.
+A diferencia del programa generalizado de Google, los créditos del programa
+{" "}<a href="https://www.microsoft.com/en-us/ai/ai-for-earth-grants">AI for Earth</a>
+{" "}van más allá de prestar el servicio de la nube y pretenden conectar todos los investigadores e iniciativas proponiendo metodologías basadas en las ciencias de datos y IA para hacer impacto en sus proyectos medioambientales.
+No estoy a favor de ninguno de los dos programas ya que cada uno tiene sus ventajas de acuerdo a las necesidades de la investigación y comunidad a la que desean pertenecer.
+Para ambos programas, se requiere completar un formulario de aplicación donde se hacen una serie de preguntas de la investigación y un estimado del total de créditos requeridos.
+Para maximizar los chances de ser seleccionado, mi sugerencia es aprovechar la subscripción prueba de cada proveedor de la nube. De esta manera, pueden hacer un mejor estimativo de los créditos requeridos así como de servicios adicionales que pueden mencionar en la aplicación.
+:::
 
 ## Resumen
 
