--- a/blog/2022-08-08-alejandro101_p2.md
+++ b/blog/2022-08-08-alejandro101_p2.md
@@ -32,17 +32,19 @@ De esta manera, registré GeoMagic Labs, una empresa consultora de tecnologías 
 Con mi emprendimiento quedé seleccionado en un concurso de consultoría con Solidaridad Network, una ONG enfocada en facilitar el desarrollo de cadenas de suministro socialmente responsables, ecológicamente sólidas y rentables. 
 En mi propuesta desarrollé una metodología para el mapeo de sistemas productivos de café usando imágenes satelitales de acceso abierto (ver detalles [aquí](/projects/#solidaridad-cafe)).
 
-<details>
-    <summary>Oportunidad 4 - Entrenamiento en Ciencias de Datos </summary>
-    La ciencia de datos ha ganado sin duda un rol importante en los diferentes dominios del conocimiento con impacto en todos los sectores. 
-    Debido a esto, un sin número de programas de capacitación y recursos se encuentran disponibles. 
-    En mi caso, aprovechando el periodo de incertidumbre y la virtualidad, me puse en la tarea de buscar cómo mejorar mis habilidades en la ciencia de datos. 
-    De esta manera encontré el programa de 
-    {" "}<a href="https://www.correlation-one.com/data-science-for-all-colombia">Data Science for All (DS4A)</a>
-    {" "}de CorrelationOne. 
-    Con recursos del gobierno de Colombia, este programa ofrece 13 semanas de entrenamiento abierto a todos los ciudadanos colombianos que estén interesados en fortalecer sus habilidades en ciencia de datos y unirse al creciente ecosistema de inteligencia artificial en Colombia. 
-    Para participar se debe pasar un examen de admisión que evalúa conocimientos generales de estadística, programación y razonamiento lógico. El programa es muy interesante, ya que no solo se recibe entrenamiento, si no que se tienen charlas con profesionales de la industria y la academia contando cómo usan la ciencia de datos en su día a día. Puedo describir el programa como de nivel básico a intermedio con ejemplos muy prácticos y la posibilidad de trabajar en equipo para poner en práctica todos los conocimientos a través de un proyecto aplicado propuesto por instituciones del gobierno, del sector privado o ONGs. CorrelationOne ofrece otros programas de entrenamiento enfocados en mujeres, empoderamiento, ingeniería, entre otros que están abiertos a cualquier nacionalidad.
-</details>
+:::info
+
+**Oportunidad 4 - Entrenamiento en Ciencias de Datos**
+
+La ciencia de datos ha ganado sin duda un rol importante en los diferentes dominios del conocimiento con impacto en todos los sectores. 
+Debido a esto, un sin número de programas de capacitación y recursos se encuentran disponibles. 
+En mi caso, aprovechando el periodo de incertidumbre y la virtualidad, me puse en la tarea de buscar cómo mejorar mis habilidades en la ciencia de datos. 
+De esta manera encontré el programa de 
+{" "}<a href="https://www.correlation-one.com/data-science-for-all-colombia">Data Science for All (DS4A)</a>
+{" "}de CorrelationOne. 
+Con recursos del gobierno de Colombia, este programa ofrece 13 semanas de entrenamiento abierto a todos los ciudadanos colombianos que estén interesados en fortalecer sus habilidades en ciencia de datos y unirse al creciente ecosistema de inteligencia artificial en Colombia. 
+Para participar se debe pasar un examen de admisión que evalúa conocimientos generales de estadística, programación y razonamiento lógico. El programa es muy interesante, ya que no solo se recibe entrenamiento, si no que se tienen charlas con profesionales de la industria y la academia contando cómo usan la ciencia de datos en su día a día. Puedo describir el programa como de nivel básico a intermedio con ejemplos muy prácticos y la posibilidad de trabajar en equipo para poner en práctica todos los conocimientos a través de un proyecto aplicado propuesto por instituciones del gobierno, del sector privado o ONGs. CorrelationOne ofrece otros programas de entrenamiento enfocados en mujeres, empoderamiento, ingeniería, entre otros que están abiertos a cualquier nacionalidad.
+:::
 
 ### Etapa 4 <sub><sup>La ciencia abierta, Mayo 2021 - a la fecha</sup></sub>
 En noviembre de 2020 el reglamento de condonación del patrocinador de mi doctorado tuvo un cambio que abrió puertas a nuevas oportunidades. 
@@ -66,27 +68,29 @@ Al ser parte del Turing, he tenido la oportunidad de colaborar con múltiples in
 -	Soy miembro y desarrollador en *scivision* (ver detalles [aquí](/projects/#turing-scivision)), una herramienta de código abierto desarrollada entre investigadores de diferentes dominios, entre ellos biología molecular, agricultura y medioambiente, así como profesionales del equipo de ingeniería de la Investigación del Turing. Mi rol en el proyecto es asegurar que la herramienta es generalizable para una variedad de imágenes (satelitales, drones, datos climáticos, entre otros) y modelos de la comunidad científica de las ciencias ambientales.
 -	Soy miembro y colíder del equipo de traducción en The Turing Way, una iniciativa liderada por la comunidad para promover las buenas prácticas de ciencia abierta y reproducible (ver detalles [aquí](/communities/#ttw)). 
 
-<details>
-    <summary>Oportunidad 5 - Comunidades y capacitación en ciencia abierta </summary>
-    Más allá de mejorar mis habilidades y buenas prácticas de programación para aplicaciones ambientales, la última etapa me ha permitido pertenecer y aportar a la comunidad de ciencia abierta. 
-    A pesar de haber pertenecido a grupos de investigación desde mi pregrado, pienso que las comunidades de ciencia abierta son las que mayor potencial tienen para tener impacto en nuestra sociedad a largo plazo. 
-    Ejemplo de estas comunidades son The Turing Way y Pangeo, la primera enfocada a una audiencia general y la otra a la comunidad de geociencias. 
-    Son comunidades que promueven una visión de la ciencia en la cual cualquier persona puede contribuir a una meta común, democratizar el conocimiento y buenas prácticas en los proyectos en diferentes sectores productivos. 
-    The Turing Way tiene un diverso canal de comunicaciones (ver detalles 
-    {" "}<a href="https://hackmd.io/@turingway/demo-intro">aquí</a>
-    ), pero lo que aconsejo en primera instancia es unirse al
-    {" "}<a href="https://theturingway.slack.com/join/shared_invite/zt-fn608gvb-h_ZSpoA29cCdUwR~TIqpBw#/shared-invite/email">Slack</a>
-    . Con cerca de 400 miembros, este es el espacio donde mayormente se pueden intercambiar ideas con todos los miembros y enterarse de las actividades de la comunidad. 
-    En el transcurso del año se organizan semanas `book dash` que son eventos tipo hackáthones en los cuales se proponen diversas actividades como proponer o revisar contenido del recurso online, charlas cortas en temas diversos de la ciencia abierta y espacios de socialización o networking entre los miembros. 
-    Diferente a los tradicionales hackáthones, no existe competencia por algún premio, cualquier contribución hace parte de una celebración común.
-    A través The Turing Way, también conocí el programa
-    {" "}<a href="https://openlifesci.org/">Open Life Science (OLS)</a>
-    . Es otra comunidad la cual ofrece 16 semanas de entrenamiento en liderazgo de ciencia abierta. 
-    Yo participé en la cuarta cohorte para validar la idea del libro de ciencias de datos ambientales por medio de reuniones con mi mentora. 
-    Posteriormente, fui co-mentor de un proyecto de conocimiento multi-lenguaje de ciencia abierta en Asia Central en la quinta cohorte. 
-    Ambas experiencias fueron valiosas, ya que en la primera pude aprender de las nociones básicas para liderar un proyecto de ciencia abierta, y posteriormente retorna lo aprendido mediante mi rol de mentoría.
-    Recomiendo totalmente unirse a OLS, son abiertos a cualquier rama del conocimiento en el cual se quiera practicar la ciencia abierta. 
-</details>
+:::info
+
+**Oportunidad 5 - Comunidades y capacitación en ciencia abierta**
+
+Más allá de mejorar mis habilidades y buenas prácticas de programación para aplicaciones ambientales, la última etapa me ha permitido pertenecer y aportar a la comunidad de ciencia abierta. 
+A pesar de haber pertenecido a grupos de investigación desde mi pregrado, pienso que las comunidades de ciencia abierta son las que mayor potencial tienen para tener impacto en nuestra sociedad a largo plazo. 
+Ejemplo de estas comunidades son The Turing Way y Pangeo, la primera enfocada a una audiencia general y la otra a la comunidad de geociencias. 
+Son comunidades que promueven una visión de la ciencia en la cual cualquier persona puede contribuir a una meta común, democratizar el conocimiento y buenas prácticas en los proyectos en diferentes sectores productivos. 
+The Turing Way tiene un diverso canal de comunicaciones (ver detalles 
+{" "}<a href="https://hackmd.io/@turingway/demo-intro">aquí</a>
+), pero lo que aconsejo en primera instancia es unirse al
+{" "}<a href="https://theturingway.slack.com/join/shared_invite/zt-fn608gvb-h_ZSpoA29cCdUwR~TIqpBw#/shared-invite/email">Slack</a>
+. Con cerca de 400 miembros, este es el espacio donde mayormente se pueden intercambiar ideas con todos los miembros y enterarse de las actividades de la comunidad. 
+En el transcurso del año se organizan semanas `book dash` que son eventos tipo hackáthones en los cuales se proponen diversas actividades como proponer o revisar contenido del recurso online, charlas cortas en temas diversos de la ciencia abierta y espacios de socialización o networking entre los miembros. 
+Diferente a los tradicionales hackáthones, no existe competencia por algún premio, cualquier contribución hace parte de una celebración común.
+A través The Turing Way, también conocí el programa
+{" "}<a href="https://openlifesci.org/">Open Life Science (OLS)</a>
+. Es otra comunidad la cual ofrece 16 semanas de entrenamiento en liderazgo de ciencia abierta. 
+Yo participé en la cuarta cohorte para validar la idea del libro de ciencias de datos ambientales por medio de reuniones con mi mentora. 
+Posteriormente, fui co-mentor de un proyecto de conocimiento multi-lenguaje de ciencia abierta en Asia Central en la quinta cohorte. 
+Ambas experiencias fueron valiosas, ya que en la primera pude aprender de las nociones básicas para liderar un proyecto de ciencia abierta, y posteriormente retorna lo aprendido mediante mi rol de mentoría.
+Recomiendo totalmente unirse a OLS, son abiertos a cualquier rama del conocimiento en el cual se quiera practicar la ciencia abierta. 
+:::
 
 
 ## Resumen
